Fixes button spacing

--- a/frontend/source/sass/components/_formbuttonrow.scss
+++ b/frontend/source/sass/components/_formbuttonrow.scss
@@ -18,9 +18,9 @@
   }
   button,
   button[type="submit"],
-  .usa-button {
+  .usa-button,
+  .usa-button-primary {
     display: inline-block;
-    margin: 0 1em 0 0;
   }
 
   .submit-group {
